<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/question_number_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline71" />

    <TextView
        android:id="@+id/questionDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline72" />

    <RadioGroup
        android:id="@+id/radioGroupContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline73">

        <RadioButton
            android:id="@+id/optionOneRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_one" />

        <RadioButton
            android:id="@+id/optionTwoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_two" />

        <RadioButton
            android:id="@+id/optionThreeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_three" />

        <RadioButton
            android:id="@+id/optionFourRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_four" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>