<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/quiz_results_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/quizResultsTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/answer_key_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline59"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/main_menu_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline63"
        app:layout_constraintTop_toTopOf="@+id/guideline62" />

    <ListView
        android:id="@+id/questionNumberListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:background="#4620D400"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/guideline62"
        app:layout_constraintEnd_toStartOf="@+id/guideline48"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6497948" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/select_a_question_number"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline59" />

    <TextView
        android:id="@+id/theQuestionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline68"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/correct_answer_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toStartOf="@+id/guideline63"
        app:layout_constraintStart_toStartOf="@+id/guideline68"
        app:layout_constraintTop_toTopOf="@+id/guideline66" />

    <TextView
        android:id="@+id/theAnswerTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline62"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline68"
        app:layout_constraintTop_toTopOf="@+id/guideline67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline63"
        app:layout_constraintStart_toStartOf="@+id/guideline68"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

</androidx.constraintlayout.widget.ConstraintLayout>